Add delta support to all migration modes